fix minor layout issues

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,10 @@
     font-weight: 400;
 }
 
+body{
+    overflow-x: hidden;
+}
+
 .content-3-4 .btn:focus,
 .content-3-4 .btn:active {
     outline: none !important;
